[gd_scene load_steps=2 format=3 uid="uid://e886rbqjnyc2"]

[ext_resource type="Script" uid="uid://dr5kc3wyx1e4e" path="res://UIs/turn_order_slot.gd" id="1_3uigy"]

[node name="TurnOrderSlot" type="PanelContainer"]
script = ExtResource("1_3uigy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ViewportTextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Character"
horizontal_alignment = 1

[node name="HPBarContainer" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2

[node name="HPBar" type="ProgressBar" parent="HBoxContainer/HPBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="HPValueLabel" type="Label" parent="HBoxContainer/HPBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterViewport" type="SubViewport" parent="."]
size = Vector2i(64, 64)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="CharacterViewport"]
zoom = Vector2(4, 4)
